# gitx-mcp

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.gitea/issue_template/: bug_report.yaml  feature_request.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  platform.rs  repo_resolver.rs  response.rs  server.rs
src/client/: gitea.rs  github.rs  mod.rs  trait_def.rs
src/tools/: actions.rs  branches.rs  commits.rs  files.rs  issue_comments.rs  issues.rs  labels.rs  milestones.rs  mod.rs  notifications.rs  orgs.rs  pull_files.rs  pull_reviews.rs  pulls.rs  releases.rs  repo.rs  tags.rs  users.rs  wiki.rs
src/types/: common.rs
